# CostWeave-Vibe-Coding-

./: ACCEPTANCE.md  CHANGELOG-v0.4.1.md  LICENSE  README.md  pyproject.toml
costweave/: __init__.py  catalog_store.py  compat_v4.py  contracts_v4.py  domain.py  engine.py  executor.py  model_catalog.py  planner.py  router.py  server.py  state_guard.py  validator.py
costweave/web/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  MODEL_CATALOG.md  V0.4.1_MIGRATION.md  V0.4_INCREMENTAL_RELEASES.md  V0.4_UPGRADE_ROADMAP.md
tests/: test_catalog_store.py  test_contracts_v4.py  test_engine.py  test_model_catalog.py  test_planner.py  test_server.py  test_web_ui.py
