[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "costweave"
version = "0.4.1"
description = "Contract-versioned, state-guarded multi-model decision orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CostWeave Contributors" }]
keywords = ["agent", "orchestration", "dag", "llm-router", "multi-agent"]

[project.scripts]
costweave = "costweave.server:main"

[tool.setuptools.packages.find]
include = ["costweave*"]

[tool.setuptools.package-data]
costweave = ["web/*"]
